--- a/JoorFlickerApp/Base.lproj/Main.storyboard
+++ b/JoorFlickerApp/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="gtA-aZ-UyF" id="Pxk-dp-NAm"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LnA-VR-xb3">
                                 <rect key="frame" x="0.0" y="108" width="375" height="559"/>
@@ -90,6 +93,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Flicker Search" id="3ry-LT-JRv"/>
                     <connections>
+                        <outlet property="flickerSearchBar" destination="gGe-dA-xBg" id="yj1-NT-gfG"/>
                         <outlet property="imageTable" destination="LnA-VR-xb3" id="KvP-d9-ZmD"/>
                         <outlet property="searchDisplayController" destination="2mu-i2-SNH" id="zHp-4v-41O"/>
                     </connections>
