--- a/JoorFlickerApp/Base.lproj/Main.storyboard
+++ b/JoorFlickerApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FLt-rv-AzO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gtA-aZ-UyF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,17 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search Flicker..." translatesAutoresizingMaskIntoConstraints="NO" id="gGe-dA-xBg">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="gtA-aZ-UyF" id="Pxk-dp-NAm"/>
-                                </connections>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LnA-VR-xb3">
-                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LnA-VR-xb3">
+                                <rect key="frame" x="0.0" y="95" width="375" height="572"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageInfoCell" rowHeight="90" id="nwd-16-NzI" customClass="ImageInfoCell" customModule="JoorFlickerApp" customModuleProvider="target">
@@ -92,11 +83,38 @@
                                     <outlet property="delegate" destination="gtA-aZ-UyF" id="U3Y-qa-YCX"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" prompt="Search Flicker for..." showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gGe-dA-xBg">
+                                <rect key="frame" x="0.0" y="20" width="375" height="75"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="gtA-aZ-UyF" id="Pxk-dp-NAm"/>
+                                </connections>
+                            </searchBar>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCR-qf-1J4">
+                                <rect key="frame" x="337" y="28" width="22" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="icons8-Error-50"/>
+                                <connections>
+                                    <action selector="noInternetConnection:" destination="gtA-aZ-UyF" eventType="primaryActionTriggered" id="Scr-67-aIe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="LnA-VR-xb3" secondAttribute="trailing" id="6xt-PV-W17"/>
+                            <constraint firstItem="LnA-VR-xb3" firstAttribute="leading" secondItem="vNC-q7-gZf" secondAttribute="leading" id="EwS-Tg-QXl"/>
+                            <constraint firstItem="gGe-dA-xBg" firstAttribute="leading" secondItem="vNC-q7-gZf" secondAttribute="leading" id="TZf-t9-SC4"/>
+                            <constraint firstItem="gGe-dA-xBg" firstAttribute="top" secondItem="1rR-VT-R6X" secondAttribute="bottom" id="WwN-X4-Ztl"/>
+                            <constraint firstItem="m6V-9g-MRz" firstAttribute="top" secondItem="LnA-VR-xb3" secondAttribute="bottom" id="kni-pV-cdC"/>
+                            <constraint firstItem="LnA-VR-xb3" firstAttribute="top" secondItem="gGe-dA-xBg" secondAttribute="bottom" id="miy-CV-aeg"/>
+                            <constraint firstAttribute="trailing" secondItem="gGe-dA-xBg" secondAttribute="trailing" id="pli-FI-ga5"/>
+                            <constraint firstItem="LnA-VR-xb3" firstAttribute="top" secondItem="gGe-dA-xBg" secondAttribute="bottom" id="x2B-6P-oub"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Flicker Search" id="3ry-LT-JRv"/>
                     <connections>
+                        <outlet property="AlertButton" destination="gCR-qf-1J4" id="cEx-4Y-g9m"/>
                         <outlet property="flickerSearchBar" destination="gGe-dA-xBg" id="yj1-NT-gfG"/>
                         <outlet property="imageTable" destination="LnA-VR-xb3" id="KvP-d9-ZmD"/>
                         <outlet property="searchDisplayController" destination="2mu-i2-SNH" id="zHp-4v-41O"/>
@@ -112,7 +130,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-380" y="50.824587706146929"/>
+            <point key="canvasLocation" x="-404" y="54.422788605697157"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ydg-Uh-XwJ">
@@ -142,7 +160,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h57-Kv-D1d">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h57-Kv-D1d">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
@@ -156,10 +174,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="6c2-GJ-HfF">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="4gR-St-6uY">
+                        <barButtonItem key="leftBarButtonItem" id="4gR-St-6uY">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OiI-fv-XIr">
                                 <rect key="frame" x="16" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                 <state key="normal" title="Photos"/>
                                 <connections>
                                     <segue destination="LiZ-eY-2po" kind="unwind" unwindAction="unwindFromPhotoWithSegue:" id="lsL-0a-bvw"/>
@@ -177,23 +196,10 @@
             </objects>
             <point key="canvasLocation" x="1328.8" y="55.322338830584712"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="4S5-Nd-etv">
-            <objects>
-                <navigationController id="FLt-rv-AzO" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="czs-mG-Q6d">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="gtA-aZ-UyF" kind="relationship" relationship="rootViewController" id="8XL-T8-z57"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AUr-Zw-eGC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1174" y="51"/>
-        </scene>
     </scenes>
+    <resources>
+        <image name="icons8-Error-50" width="50" height="50"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="X8b-ef-6fC"/>
     </inferredMetricsTieBreakers>
